# BitNet

./: .gitignore  testing.py
bitnet/: __init__.py
kernel/: CMakeLists.txt  gemm_lowbit.cpp  gemm_lowbit_kernel.cu  gemm_lowbit_kernel.h
